fix(bugfix): timetables not detected on macOS

--- a/backend/ML/Dockerfile
+++ b/backend/ML/Dockerfile
@@ -20,4 +20,5 @@ RUN pip3 install fastapi uvicorn opencv-python starlette
 RUN pipenv install
 RUN pip3 install python-multipart
 
+EXPOSE 8000
 CMD ["uvicorn","main:app","--reload","--port","8000","--host","0.0.0.0"]
